# suthub-technical-assessment

./: Makefile  README.md
age-groups-api/: pyproject.toml  requirements.txt  template.yml
age-groups-api/src/: config.py  db.py  main.py  models.py
age-groups-api/src/api/: deps.py  main.py
age-groups-api/src/api/routes/: age_groups.py
age-groups-api/tests/integration/: test_api_gateway.py
enrollment-api/: .gitignore  enrollment_processor.py  pyproject.toml  requirements.txt  template.yml
enrollment-api/src/: config.py  db.py  main.py  models.py
enrollment-api/src/api/: deps.py  main.py
enrollment-api/src/api/routes/: enrollment.py
enrollment-api/tests/integration/: test_api_gateway.py
