[tool.poetry]
name = "age-groups-api"
version = "0.3.1"
description = ""
authors = ["Guilherme Ferreira <guilherme.xgfx@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.2"
fastapi = "^0.111.0"
boto3 = "^1.34.114"
mangum = "^0.17.0"
pydantic-settings = "^2.2.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.6"
pytest = "^8.2.1"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
